@@ -8,3 +8,7 @@ Preferences
 	- Add joined channels to buddy list automatically (during
 	  session)
 	- Add joined channels to buddy list automatically permanently
+
+Buddy icon
+	- After SILC Toolkit 1.0.2 buddy icon support can be added
+	  (SILC_ATTERIBUTE_USER_ICON).
